--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "ES2022",
       "dom"
     ]
+    , "noImplicitAny": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
